--- a/files/pg_hba.conf
+++ b/files/pg_hba.conf
@@ -90,6 +90,8 @@ local   all             postgres                                trust
 local   all             all                                     md5
 # IPv4 local connections:
 host    all             all             127.0.0.1/32            md5
+# IPv4 remote connections - change this line if you want to limit access to specific IP ranges.
+host    all             all             0.0.0.0/0               md5 
 # IPv6 local connections:
 host    all             all             ::1/128                 md5
 # Allow replication connections from localhost, by a user with the
